# nncompress

./: .gitignore  README.rst  config.json  pyproject.toml
nncompress/: __main__.py  core.py  metrics.py  model.py
