[tool.poetry]
name = "nncompress"
version = "0.1.0"
description = ""
authors = ["arjoonn sharma <arjoonn.94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tensorboardX = "^2.0"
tqdm = "^4.45.0"
numpy = "^1.18.2"
tensorboard = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
